# rust-rocket

./: .env  .gitignore  Cargo.toml  README.md
data/: Northwind.Db  data.db  ventosdonorte.script.sql
sql/: all_cli.sql  all_prod.sql  cli.sql  inserir_usuario.sql  prod.sql  tables.sql
sql/ped/: ped.sql  ped_cli.sql  ped_itens.sql  ped_tra.sql
src/: main.rs  routes.rs  tests.rs
src/routes/: db.rs  models.rs  repository.rs
src/routes/models/: custom.rs
static/: clientes.csv  clientes.json
templates/: base.html.tera  index.html.tera  nav.tera
templates/error/: 404.html.tera
teste/: api.http
