[package]
name = "rust-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
native-tls = "0.2.11"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "sqlite", "macros"]}
rocket = { version = "0.5.0-rc.2", features = ["json"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
